:lipstick: Featured Collection section fix text size on mobile

--- a/leblanc/components/collection/FeaturedSection/FeaturedSection.module.css
+++ b/leblanc/components/collection/FeaturedSection/FeaturedSection.module.css
@@ -22,7 +22,7 @@
   @apply p-8 md:p-16 bg-lbsGreen;
   @apply border-b-[1px] border-black border-solid;
   & > p {
-    @apply text-2xl pb-10 tracking-widest;
+    @apply text-lg md:text-2xl pb-10 tracking-widest;
   }
 }
 
